--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           as imagens, bolar um mapa detalhado de sua superfície.
         </p>
         <div id="galeria">
-          <img src="http://fegemo.github.io/cefet-web/images/osiris/01-modelo-artistico-da-sonda.webp" id="slide">
+          <img src="http://fegemo.github.io/cefet-web/images/osiris/modelo-artistico-da-sonda.webp" id="slide">
           <button id="anterior" class="navegar">Anterior</button>
           <button id="proximo" class="navegar">Próximo</button>
         </div>
@@ -162,6 +162,9 @@
     
     <!-- navegacao: código que faz a "navegação em abas" da página -->
     <script src="navegacao.js"></script>
+    <script src="exercicio1.js"></script>
+    <script src="exercicio2.js"></script>
+    <script src="exercicio3.js"></script>
     <!-- inclua os arquivos dos exercícios aqui: -->
 
 
